# mama

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  README.md  alembic.ini  main.py  package-lock.json  package.json  pyproject.toml  test_oauth_flow.py  test_twitter_oauth.py  test_twitter_pkce.py
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: app-shell.tsx  globals.css  layout.tsx  page.tsx
dashboard/lib/: api.ts  auth.ts  utils.ts  websocket.ts
dashboard/types/: index.ts
docker/: Dockerfile  docker-compose.infra.yml  docker-compose.yml  prometheus.yml
docs/: AGENT_FRAMEWORK.md  AGENT_PROMPTS.md  ANALYTICS_TRACKING.md  APPROVAL_WORKFLOWS.md  COMMUNICATION_PROTOCOL.md  FRAME_COMBINE_ENGINE.md  HUMAN_REVIEW_SYSTEM.md  MEDIA_APIS.md  MEDIA_PIPELINE.md  N8N_VS_PYTHON_STRATEGY.md  PLATFORM_APIS.md  PUBLISHING_PIPELINE.md  QA_CRITERIA.md  gtm-head-interview-guide.md  gtm-head-job-description.md  oauth-setup.md  oauth-testing-results.md  social-connections-fix.md  twitter-oauth-fix.md  twitter-pkce-implementation.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_name_description_to_content_jobs.py  003_add_reinitiation_tracking.py  004_add_social_oauth_tokens.py
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: index.tsx  types.ts
src/: __init__.py
src/agents/: __init__.py  base.py  cmi.py  csa.py  cst.py  decision_maker.py  gtm.py  mama.py  vst.py
src/api/: dependencies.py  main.py
src/approval/: __init__.py  audio_approver.py  human_review.py  image_approver.py  vam.py  video_approver.py
src/config/: settings.py
src/database/: __init__.py  models.py  repository.py  session.py
src/media/: __init__.py  audio_generator.py  av_merger.py  frame_combiner.py  html_to_remotion.py  image_generator.py  remotion_renderer.py  script_separator.py  (+1 more)
tasks/: lessons.md
tests/: conftest.py
(+77 files in other folders)
